--- a/index.html
+++ b/index.html
@@ -2,20 +2,14 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>NFT Mini App</title>
-  <script src="https://telegram.org/js/telegram-web-app.js"></script>
+  <title>NFT Market Mini App</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>NFT Marketplace</h1>
-  <div id="wallet">Wallet: <span id="address">Not connected</span></div>
-  <button id="connectBtn">Connect Wallet</button>
-
-  <h2>Marketplace</h2>
-  <div id="items">
-    <p>Loading NFTs...</p>
-  </div>
-
+  <h1>NFT Mini Market</h1>
+  <button onclick="buyNFT()">Buy NFT</button>
+  <button onclick="sellNFT()">Sell NFT</button>
+  <button onclick="exchangeNFT()">Exchange NFT</button>
   <script src="script.js"></script>
 </body>
 </html>
